--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: build_FRE-NCtools
 on: [push, pull_request]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04	
     strategy:
       matrix:
         with_mpi: ['--with-mpi', '']
@@ -17,8 +17,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup
         run: |
-          sudo add-apt-repository ppa:remik-ziemlinski/nccmp
-          sudo apt-get update
+          sudo add-apt-repository ppa:remik-ziemlinski/nccmp --update
           sudo apt-get install -y libnetcdf-dev libnetcdff-dev netcdf-bin libopenmpi-dev openmpi-bin bats nccmp
       - name: Cache log file
         uses: actions/cache@v2.1.1 
