--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,14 @@ jobs:
         run: |
           sudo add-apt-repository ppa:remik-ziemlinski/nccmp --update
           sudo apt-get install -y libnetcdf-dev libnetcdff-dev netcdf-bin libopenmpi-dev openmpi-bin bats nccmp
-      - name: Cache log file
-        uses: actions/cache@v2.1.1 
-        with: 
-         path: t/test-suite.log
-         key: ${{ matrix.with_mpi }}-suite.log
-      - name: Build
+      - name: Build and test
         run: | 
           autoreconf -i configure.ac
           ./configure $MPI
           make -j check LOG_DRIVER_FLAGS=--comments
-      
+      - name: Save log file
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: test-suite${{ matrix.with_mpi}}.log
+          path: t/test-suite.log
