Edits to run container

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,15 +4,13 @@
 name: build_FRE-NCtools
 
 on: [push, pull_request]
-jobs:
-  build:
-    runs:
-      using: 'docker'
-      image: 'Dockerfile'
-    strategy:
-      matrix:
-        with_mpi: ['--with-mpi', '']
-    env:
-      MPI: ${{ matrix.with_mpi }}
-    steps:
-      - uses: actions/checkout@v2
+#strategy:
+#  matrix:
+#    with_mpi: ['--with-mpi', '']
+#steps:
+#  - uses: actions/checkout@v2
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+   - ${{matrix.with_mpi }}
