--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         if: failure()
         with:
           name: test-suite${{ matrix.with_mpi}}.log
-          path: ocean_temp_salt.res.latlon.nc
+          path: /home/runner/work/FRE-NCtools/FRE-NCtools/t/ocean_temp_salt.res.latlon.nc
