--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,11 @@ jobs:
         run: | 
           autoreconf -i configure.ac
           ./configure $MPI
+          pwd && ls
           make -j check LOG_DRIVER_FLAGS=--comments
       - name: Save log file
         uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: test-suite${{ matrix.with_mpi}}.log
-          path: /home/runner/work/FRE-NCtools/FRE-NCtools/t/ocean_temp_salt.res.latlon.nc
+          path: $GITHUB_WORKSPACE/ocean_temp_salt.res.latlon.nc
