--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,13 @@ jobs:
         run: | 
           autoreconf -i configure.ac
           ./configure $MPI
-          ls $GITHUB_WORKSPACE/FRE-NCtools/t/*
           make -j check LOG_DRIVER_FLAGS=--comments
+      - name: find file
+        run: |
+          find $GITHUB_WORKSPACE -name ocean_temp_salt.res.latlon.nc
       - name: Save log file
         uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: test-suite${{ matrix.with_mpi}}.log
-          path: $GITHUB_WORKSPACE/FRE-NCtools/t/ocean_temp_salt.res.latlon.nc
+          path: $GITHUB_WORKSPACE/ocean_temp_salt.res.latlon.nc
