--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,10 @@ jobs:
         run: | 
           autoreconf -i configure.ac
           ./configure $MPI
-          find . -name ocean_temp_salt.res.latlon.nc
           make -j check LOG_DRIVER_FLAGS=--comments
       - name: Save log file
         uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: test-suite${{ matrix.with_mpi}}.log
-          path: /home/runner/work/FRE-NCtools/FRE-NCtools/t/Test24/ocean_temp_salt.res.latlon.nc
+          path: t/test-suite.log
