--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       run: docker run -u root --entrypoint "/bin/sh" --env MPI fre-nctools$MPI /build.sh
     - name: Copy log file
       if: failure()
-      run: docker cp fre-nctools$MPI:/t/test-suite.log t/test-suite.log
+      run: docker cp `docker ps -aqf "name=fre-nctools$MPI"`:t/test-suite.log t/test-suite.log
     - name: Save log file on failure
       uses: actions/upload-artifact@v2
       if: failure()
