--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,12 @@ jobs:
         if [[ "$MPI" != "" ]]; then sed -i 's/autoconf/autoconf libopenmpi-dev openmpi-bin/' Dockerfile; fi
         docker build . -t fre-nctools$MPI
     - name: Build and run tests
-      run: docker run -u root --entrypoint "/bin/sh" --env MPI fre-nctools$MPI /build.sh
+      run: docker run -u root --entrypoint "/bin/sh" --env MPI --name container$MPI fre-nctools$MPI /build.sh
     - name: Copy log file
       if: failure()
-      run: docker cp fre-nctools$MPI:FRE-NCtools/t/test-suite.log /test-suite.log
+      run: |
+        docker container inspect container$MPI
+        docker cp container$MPI:t/test-suite.log /test-suite.log
     - name: Save log file on failure
       uses: actions/upload-artifact@v2
       if: failure()
