--- a/t/Makefile.am
+++ b/t/Makefile.am
@@ -51,7 +51,9 @@ EXTRA_DIST = $(TESTS) \
              Test07-input \
              Test08-input \
              Test10-input \
+             Test11-input \
              Test12-input \
+             Test14-input \
              Test15-input \
              Test16-input \
              Test17-input \
