Set log file step to trigger on failure

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,11 @@ jobs:
     - name: Build and run tests
       run: docker run -u root --entrypoint "/bin/sh" --env MPI --name container$MPI fre-nctools$MPI /build.sh
     - name: Copy log file
-      if: ${{ always() }}
+      if: ${{ failure() }}
       run: docker cp container$MPI:t/test-suite.log test-suite.log
     - name: Save log file on failure
       uses: actions/upload-artifact@v2
-      if: ${{ always() }}
+      if: ${{ failure() }}
       with:
           name: test-suite${{ matrix.with_mpi}}.log
           path: test-suite.log
