--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
       env:
         MPI: ${{ matrix.with_mpi }}
         QUAD_P: ${{ matrix.enable_quad_precision }}
+        FC: "mpifort"
+        CC: "mpicc"
     steps:
     - name: Checkout
       uses: actions/checkout@v2
