--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Build and create distribution
       run: |
         which a2x
-        which asciidocs
+        which asciidoc
         cd build
         make
         make distcheck
