--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,16 +8,18 @@ on: push
 jobs:
   create-release-dist:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/rem1776/fre-nctools:dist-test4
     steps:
     - name: Checkout
       uses: actions/checkout@v4
       with:
         submodules: recursive
+    - name: Install dependencies # no nccmp package, but this will still pass configure
+      run: |
+        apt-get install -y nco which netcdf-bin libnetcdf-dev \
+          libnetcdff-dev mpich gcc gfortran asciidoc docbook-xsl docbook-xml \
+          python3 python3-numpy python3-pytest perl libgomp git make libtool autoconf 
     - name: Configure
       run: |
-        dnf install -y nco which
         mkdir build && cd build
         autoreconf -i ../configure.ac
         ../configure
