--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,7 @@ jobs:
       run: |
         sudo apt-get install -y nco which netcdf-bin libnetcdf-dev \
           libnetcdff-dev mpich gcc gfortran asciidoc docbook-xsl docbook-xml \
-          python3 python3-numpy python3-pytest perl libgomp git make libtool autoconf 
+          python3 python3-numpy python3-pytest perl git make libtool autoconf 
     - name: Configure
       run: |
         mkdir build && cd build
