--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,7 +23,7 @@ jobs:
       run: |
         mkdir build && cd build
         autoreconf -if ../configure.ac
-        ../configure
+        ../configure --enable-mpi
     - name: Build and create distribution file
       run: |
         cd build
