--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -10,10 +10,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     - name: Get tag name
-      run: |
-        echo "tagName=`grep -E '?[0-9]{4}\.[0-9]{2}(\.[0-9]{2})?' configure.ac`" >> "$GITHUB_ENV"
+      id: get-tag
+      run: echo "TAGNAME=`grep -E '?[0-9]{4}\.[0-9]{2}(\.[0-9]{2})?' configure.ac`" >> "$GITHUB_OUTPUT"
     - name: Create tag
       uses: actions/github-script@v5
+      env:
+        TAG: ${{ steps.get-tag.outputs.TAGNAME }}
       with:
         script: |
           github.rest.git.createRef({
