--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -21,6 +21,6 @@ jobs:
           github.rest.git.createRef({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            ref: 'refs/tags/${tagName}',
+            ref: 'refs/tags/${TAG}',
             sha: context.sha
           })
