--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Get tag name
       id: get-tag
-      run: echo "TAGNAME=`grep -E '?[0-9]{4}\.[0-9]{2}(\.[0-9]{2})?' configure.ac`" >> "$GITHUB_OUTPUT"
+      run: echo "TAGNAME=`grep -o -E '?[0-9]{4}\.[0-9]{2}(\.[0-9]{2})?' configure.ac`" >> "$GITHUB_OUTPUT"
     - name: Create tag
       uses: actions/github-script@v5
       env:
